# trans-fx

./: LICENSE  README.md  makefile  stack.yaml
docs/: basic-effects.html  compose.html  doing-io.html  index.html  intro.html  style.css
trans-fx/: .gitignore  ChangeLog.md
trans-fx-core/: CHANGELOG.md  trans-fx-core.cabal
trans-fx-core/app/: Main.hs
trans-fx-core/src/Control/: FX.hs
trans-fx-core/src/Control/FX/: EqIn.hs  Functor.hs  Monad.hs
trans-fx-core/src/Control/FX/Functor/: Await.hs  Class.hs  LeftZero.hs  Muse.hs  Pair.hs  RightZero.hs  Tag.hs  Yield.hs
trans-fx-core/src/Control/FX/Monad/: AppendOnly.hs  Apply.hs  Class.hs  Compose.hs  Except.hs  Flip.hs  From.hs  Halt.hs  Identity.hs  ReadOnly.hs  State.hs  Trans.hs  Unit.hs  WriteOnce.hs  WriteOnly.hs
trans-fx-core/src/Control/FX/Monad/Trans/: AppendOnlyT.hs  ApplyT.hs  Class.hs  ComposeT.hs  CoroutineT.hs  ExceptT.hs  HaltT.hs  IdentityT.hs  MaybeT.hs  ReadOnlyT.hs  StateT.hs  Trans.hs  WriteOnceT.hs  WriteOnlyT.hs
trans-fx-core/src/Control/FX/Monad/Trans/Trans/: AppendOnlyTT.hs  ApplyTT.hs  Class.hs  ComposeTT.hs  CoroutineTT.hs  ExceptTT.hs  HaltTT.hs  IdentityTT.hs  OverTT.hs  PromptTT.hs  ReadOnlyTT.hs  StateTT.hs  WriteOnceTT.hs  WriteOnlyTT.hs
trans-fx-data/: .gitignore  CHANGELOG.md
trans-fx-data/src/Control/FX/: Data.hs
trans-fx-data/src/Control/FX/Monad/Data/: Class.hs  Stack.hs
trans-fx-data/src/Control/FX/Monad/Trans/Data/: StackT.hs
trans-fx-data/src/Control/FX/Monad/Trans/Trans/Data/: StackTT.hs
trans-fx-data/src/Control/FX/Structure/: Stack.hs
trans-fx-demo/: .gitignore  trans-fx-demo.cabal
trans-fx-demo/src/Control/FX/: Demo.hs  Demo.lhs
trans-fx-demo/src/Control/FX/Demo/: BasicEffects.lhs  Compose.lhs  DoingIO.lhs  Intro.lhs
trans-fx-io/: .gitignore  CHANGELOG.md  trans-fx-io.cabal
trans-fx-io/src/Control/FX/: IO.hs
trans-fx-io/src/Control/FX/IO/Monad/Trans/Trans/: Class.hs  TeletypeTT.hs
trans-fx-io/src/Control/FX/Monad/Trans/Trans/IO/: Class.hs  SimpleHttpTT.hs  SimpleSQLiteTT.hs  SystemClockTT.hs  TeletypeTT.hs
trans-fx-test/: .gitignore  trans-fx-test.cabal
trans-fx-test/src/: Test.hs
trans-fx-test/src/Control/FX/: Arbitrary.hs  EqIn.hs  Show.hs
trans-fx-test/src/Control/FX/Functor/: Arbitrary.hs
trans-fx-test/src/Control/FX/Monad/: Arbitrary.hs  EqIn.hs
trans-fx-test/src/Control/FX/Monad/Trans/: Arbitrary.hs  EqIn.hs  Show.hs
trans-fx-test/src/Control/FX/Monad/Trans/Trans/: Arbitrary.hs  EqIn.hs  Show.hs
trans-fx-test/src/Test/Tasty/QuickCheck/Laws/: FX.hs
trans-fx-test/src/Test/Tasty/QuickCheck/Laws/FX/: AppendOnly.hs  Bifunctor.hs  Central.hs  Commutant.hs  EqIn.hs  LiftCatch.hs  LiftDraft.hs  MonadTrans.hs  MonadTransTrans.hs  WriteOnce.hs
trans-fx-test/src/Test/Tasty/QuickCheck/Laws/FX/Data/: Stack.hs
trans-fx-test/test/: Test.hs
trans-fx-test/test/Test/: Eq.hs  Functor.hs  Monad.hs  MonadTrans.hs  MonadTransTrans.hs  MonadTransTrans_FAM_1.hs  MonadTransTrans_FAM_2.hs  MonadTransTrans_FAM_3.hs  MonadTransTrans_FAM_4.hs  MonadTransTrans_FAM_5.hs  MonadTransTrans_FX.hs  MonadTransTrans_TT.hs  MonadTrans_FAM.hs  MonadTrans_FAM_1.hs  MonadTrans_FAM_2.hs  MonadTrans_FAM_3.hs  MonadTrans_FAM_4.hs  MonadTrans_FAM_5.hs  MonadTrans_T.hs
trans-fx-testing/: ChangeLog.md  LICENSE  trans-fx-testing.cabal
trans-fx-testing/src/Control/FX/: EqIn.hs
trans-fx-testing/src/Control/FX/EqIn/: Class.hs
trans-fx-testing/src/Control/FX/Functor/: Arbitrary.hs  EqIn.hs
trans-fx-testing/src/Control/FX/Monad/: Arbitrary.hs  EqIn.hs  Show.hs
trans-fx-testing/src/Control/FX/Monad/Trans/: Arbitrary.hs  EqIn.hs  Show.hs
trans-fx-testing/src/Control/FX/Monad/Trans/Trans/: Arbitrary.hs  EqIn.hs  Show.hs
trans-fx-testing/src/Test/Tasty/QuickCheck/Laws/FX/: Central.hs  MonadTrans.hs  MonadTransTrans.hs
trans-fx-testing/test/: Test.hs
trans-fx/app/: Main.hs
trans-fx/src/Control/: FX.hs
trans-fx/src/Control/FX/: Functor.hs  Monad.hs
trans-fx/src/Control/FX/Functor/: Class.hs  LeftZero.hs  Pair.hs  Tag.hs
trans-fx/src/Control/FX/Monad/: Apply.hs  Class.hs  Compose.hs  Except.hs  Flip.hs  Identity.hs  ReadOnly.hs  Reader.hs  State.hs  Tagged.hs  Trans.hs  WriteOnly.hs  Writer.hs
trans-fx/src/Control/FX/Monad/Trans/: ApplyT.hs  Class.hs  ComposeT.hs  ExceptT.hs  IdentityT.hs  MaybeT.hs  ReadOnlyT.hs  ReaderT.hs  StateT.hs  Trans.hs  WriteOnlyT.hs  WriterT.hs
trans-fx/src/Control/FX/Monad/Trans/Trans/: Class.hs  ComposeTT.hs  IdentityTT.hs  OverTT.hs  PromptTT.hs
trans-fx/test/: Test.hs
