cabal-version:  1.12
name:           trans-fx-core
version:        0.1.0.0
description:    Effect framework
homepage:       https://github.com/nbloomf/trans-fx#readme
bug-reports:    https://github.com/nbloomf/trans-fx/issues
author:         Nathan Bloomfield
maintainer:     nbloomf@gmail.com
copyright:      Automattic, Inc
license:        BSD3
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/nbloomf/trans-fx/trans-fx-core

library
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
      base >=4.7 && <5
  exposed-modules:
      Control.FX
    , Control.FX.EqIn
    , Control.FX.Functor
    , Control.FX.Functor.Class
    , Control.FX.Functor.Pair
    , Control.FX.Functor.LeftZero
    , Control.FX.Functor.RightZero
    , Control.FX.Functor.Muse
    , Control.FX.Functor.Await
    , Control.FX.Functor.Yield
    , Control.FX.Monad
    , Control.FX.Monad.Class
    , Control.FX.Monad.Identity
    , Control.FX.Monad.Compose
    , Control.FX.Monad.Flip
    , Control.FX.Monad.Apply
    , Control.FX.Monad.ReadOnly
    , Control.FX.Monad.State
    , Control.FX.Monad.Halt
    , Control.FX.Monad.Except
    , Control.FX.Monad.WriteOnly
    , Control.FX.Monad.AppendOnly
    , Control.FX.Monad.Trans
    , Control.FX.Monad.Trans.Class
    , Control.FX.Monad.Trans.IdentityT
    , Control.FX.Monad.Trans.ComposeT
    , Control.FX.Monad.Trans.ApplyT
    , Control.FX.Monad.Trans.ReadOnlyT
    , Control.FX.Monad.Trans.StateT
    , Control.FX.Monad.Trans.HaltT
    , Control.FX.Monad.Trans.ExceptT
    , Control.FX.Monad.Trans.WriteOnlyT
    , Control.FX.Monad.Trans.AppendOnlyT
    , Control.FX.Monad.Trans.CoroutineT
    , Control.FX.Monad.Trans.Trans
    , Control.FX.Monad.Trans.Trans.Class
    , Control.FX.Monad.Trans.Trans.IdentityTT
    , Control.FX.Monad.Trans.Trans.PromptTT
    , Control.FX.Monad.Trans.Trans.ApplyTT
    , Control.FX.Monad.Trans.Trans.OverTT
    , Control.FX.Monad.Trans.Trans.StateTT
    , Control.FX.Monad.Trans.Trans.ReadOnlyTT
    , Control.FX.Monad.Trans.Trans.WriteOnlyTT
    , Control.FX.Monad.Trans.Trans.ExceptTT
    , Control.FX.Monad.Trans.Trans.HaltTT
    , Control.FX.Monad.Trans.Trans.AppendOnlyTT
    , Control.FX.Monad.Trans.Trans.CoroutineTT

test-suite trans-fx-core-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , trans-fx-core
    , trans-fx-test
