cabal-version:  1.12
name:           trans-fx-demo
version:        0.0.1
description:    Please see the README at <https://github.com/nbloomf/trans-fx#readme>
homepage:       https://github.com/nbloomf/trans-fx/#readme
bug-reports:    https://github.com/nbloomf/trans-fx/issues
author:         Nathan Bloomfield
maintainer:     nbloomf@gmail.com
copyright:      Automattic, Inc
license:        BSD3
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/nbloomf/trans-fx/trans-fx-demo

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
      Control.FX.Demo
    , Control.FX.Demo.BasicEffects
    , Control.FX.Demo.DoingIO
  build-depends:
      base >=4.7 && <5
    , trans-fx-core
    , trans-fx-test
    , trans-fx-data
    , trans-fx-io

test-suite trans-fx-demo-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , trans-fx-core
    , trans-fx-test
    , trans-fx-io
    , tasty >=1.2
    , tasty-quickcheck >=0.10
    , tasty-quickcheck-laws >=0.0.2
